# eventsourced

./: .travis.yml  LICENSE  Makefile  README.md  TODO.md  configure  eventsourced.cabal  index.html  script.js  stack.yaml
app/: Main.hs
src/: Args.hs  Lib.hs
src/Network/Eventsourced/: Args.hs  Lib.hs
test/: Spec.hs
