name:                eventsourced
version:             0.1.0.0
synopsis:            Server-Sent Events the UNIX way
description:         Please see README.md
homepage:            https://github.com/githubuser/eventsourced#readme
license:             MIT
license-file:        LICENSE
author:              Richard Towers
maintainer:          richard@richard-towers.com
copyright:           2016 Richard Towers
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , blaze-builder
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable eventsourced
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , warp
                     , eventsourced
  default-language:    Haskell2010

test-suite eventsourced-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , HUnit
                     , bytestring
                     , blaze-builder
                     , wai-extra
                     , eventsourced
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/eventsourced
